# libutils

./: .gitignore  CMakeLists.txt  README.md  toolchain_w32.cmake
include/: CMakeLists.txt  argparse.h  base64.h  config.h.in  error.h  list.h  log.h
include/libutils/: argparse.h  base64.h  error.h  list.h  log.h
src/: CMakeLists.txt  argparse.c  base64.c  list.c  log.c
tests/: CMakeLists.txt
tests/argparse/: CMakeLists.txt  argparse_fail.c  argparse_init.c  argparse_subcommand_fail.c  argparse_subcommand_init.c  argparse_subcommand_success.c  argparse_success.c  argparse_test.h
tests/base64/: CMakeLists.txt  base64.c
tests/list/: CMakeLists.txt  list_init.c  list_insert.c  list_iter.c  list_remove.c  list_test.h  list_walk.c
tests/log/: CMakeLists.txt  log_base.c  log_hierarchy.c
